--- a/views/List.ejs
+++ b/views/List.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Crime</title>
+  <title><%=products[0].category%></title>
   <link href="/CSS/List.css" rel="stylesheet" >
 </head>
 <body>
@@ -45,69 +45,26 @@
 
 <main>
   <div class="view_wrap list-view" style="display: block;">
-<%if (products.length < 6){ var x = products.length;} else{ var x = 5;} for(var i=0; i < x; i++){ %>
+<%if (products.length < 20){ var x = products.length;} else{ var x = 20;} for(var i=0; i < x; i++){ %>
     <div class="view_item">
-      <div class="vi_left" onclick="window.location.href = 'Product.html';">
-        <img src="<%=products[i].image%>" alt="tomato">
+      <form action="/Product" method="post">
+      <div class="vi_left">
+        <input class="img" type="submit" style="background-image:url(<%=products[i].image%>);" value="" >
       </div>
+      <input type="hidden" name="id" value=<%=products[i]._id%>>
+      </form>
       <div class="vi_right">
-        <p class="title" onclick="window.location.href = 'Product.html';" ><%=products[i].name%></p>
+        <p class="title"><%=products[i].name%></p>
         <p class="author">-<%=products[i].author%></p>
-        <!-- <p class="content" >A definitive ensemble murder mystery, Clair's star-studded whodunit remains a masterfully-plotted game of suspense. On a remote and isolated island, ten people - seven invited guests, a newly hired personal secretary and two servants - find themselves facing their own deaths.</p> -->
         <form action="/cart" method='post' class="btns">
           <input type="submit" class="btn1" value="Add To Cart">
           <input type="hidden" name="id" value=<%=products[i].id%>>
-          <!-- <div class="btn2">Add To Wishlist</div> -->
+          </form>
+          </div>
         </div>
-      </div>
-    </div>
     <%}%>
-<!-- 
-    <div class="view_item">
-      <div class="vi_left">
-        <img src="/Images/ATTWN.jpg" alt="tomato">
-      </div>
-      <div class="vi_right">
-        <p class="title">And Then There Were None</p>
-        <p class="author">-Agatha Christie</p>
-        <p class="content">A definitive ensemble murder mystery, Clair's star-studded whodunit remains a masterfully-plotted game of suspense. On a remote and isolated island, ten people - seven invited guests, a newly hired personal secretary and two servants - find themselves facing their own deaths.</p>
-        <div class="btns">
-          <div class="btn1">Buy Now</div>
-          <div class="btn2">Add To Wishlist</div>
-        </div>
-      </div>
-    </div>
+  </div>
 
-    <div class="view_item">
-      <div class="vi_left">
-        <img src="/Images/ATTWN.jpg" alt="tomato">
-      </div>
-      <div class="vi_right">
-        <p class="title">And Then There Were None</p>
-        <p class="author">-Agatha Christie</p>
-        <p class="content">A definitive ensemble murder mystery, Clair's star-studded whodunit remains a masterfully-plotted game of suspense. On a remote and isolated island, ten people - seven invited guests, a newly hired personal secretary and two servants - find themselves facing their own deaths.</p>
-        <div class="btns">
-          <div class="btn1">Buy Now</div>
-          <div class="btn2">Add To Wishlist</div>
-        </div>
-      </div>
-    </div>
-
-    <div class="view_item">
-      <div class="vi_left">
-        <img src="/Images/ATTWN.jpg" alt="tomato">
-      </div>
-      <div class="vi_right">
-        <p class="title">And Then There Were None</p>
-        <p class="author">-Agatha Christie</p>
-        <p class="content">A definitive ensemble murder mystery, Clair's star-studded whodunit remains a masterfully-plotted game of suspense. On a remote and isolated island, ten people - seven invited guests, a newly hired personal secretary and two servants - find themselves facing their own deaths.</p>
-        <div class="btns">
-          <div class="btn1">Buy Now</div>
-          <div class="btn2">Add To Wishlist</div>
-        </div>
-      </div>
-    </div>
-  </div> -->
 
     <footer>
       <div class="about">
