--- a/views/List.ejs
+++ b/views/List.ejs
@@ -17,7 +17,7 @@
     <ul id="topMenu">
       <li class="lt"><a href="/HomePage">Home</a></li>
       <li><a href="/Categories">Categories</a></li>
-      <li><a href="/List">Top Sellers</a></li>
+      <li><a href="/topSellers">Top Sellers</a></li>
       <li><a href="/AboutUs">About us</a></li>
       <li class="rt"><a href="ContactUs">Contact us</a></li>
     </ul>
