--- a/Public/CSS/AboutUs.css
+++ b/Public/CSS/AboutUs.css
@@ -21,37 +21,39 @@ body {
 
 /* ! HEADER CSS */
 
-header {
+header{
   display: flex;
   justify-content: space-between;
-  background-color: #CD853F;
-  /* min-height: ; */
+  /* background-color: #CD853F; */
+  background-color: #000000;
+  color:#fff;
 }
 
 /* * START LOGO */
-.logot {
+.logot{
   display: flex;
   align-items: center;
   cursor: pointer;
 }
 
-.logot img {
+.logot img{
   width: 50px;
   padding: 4%;
 }
 
-.logot h2 {
+.logot h2{
   padding-left: calc(1px + 0.6vw);
   padding-right: calc(1px + 0.6vw);
   font-size: calc(5px + 1.3vw);
   font-weight: 600;
 }
-
 /* *END LOGO */
 
 /* * START NAVIGATION BAR */
 .menuDiv {
-  background-color: #F4A460;
+  /* margin-left: 70px; */
+  margin-left: calc(7px + 8vw);
+  background-color: #000000;
   color: #2e70a9;
   border-radius: 10px;
 }
@@ -59,25 +61,24 @@ header {
 .menuDiv ul {
   display: flex;
 }
-
 .menuDiv ul li {
   list-style: none;
 }
 
 .menuDiv ul li a {
-  color: black;
+  color: rgb(255, 255, 255) ;
   text-decoration: none;
   padding: calc(3px + 1.12vw);
-  display: flex;
+  display:  flex;
   align-content: center;
-  font-size: calc(2px + 1vw);
+  font-size: calc(2px + 1.1vw);
   transition: ease-in-out all .3s;
   text-align: center;
 }
 
 .menuDiv ul li a:hover {
   color: #fff;
-  font-size: calc(4px + 0.91vw);
+  font-size: calc(4px + 1vw);
   background: #2e70a9;
 }
 
@@ -94,22 +95,27 @@ header {
   border-top-right-radius: 7px;
   border-bottom-right-radius: 7px;
 }
-
 /* * END NAVIGATION BAR */
 
 /* * START PROFILE MENU */
-.profile {
-  /* background-color: chocolate; */
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.prof_photo {
-  width: calc(8px + 3vw);
-  padding-right: calc(0.5px + 1vw);
-  padding-left: calc(0.5px + 1vw);
-}
+.profile , .cart {
+    /* background-color: chocolate; */
+    display: flex;
+    align-items:center;
+    justify-content:flex-end;
+  }
+  
+  .prof_photo {
+    width: calc(8px + 3vw);
+    padding-right: calc(0.5px + 1vw);
+    padding-left: calc(0.5px + 1vw);
+  }
+  
+  .cart_photo{
+    width: calc(8px + 3vw);
+    padding-right: calc(1px + 1vw);
+    cursor:pointer;  
+  }
 
 .profile form input {
   width: calc(5px + 13vw);
@@ -133,10 +139,10 @@ input::-webkit-input-placeholder {
   cursor: pointer;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
-  width: calc(25px + 0.8vw);
+  width: calc(26px + 0.8vw);
 }
 
-.profile form button img {
+.profile form button img{
   width: calc(5px + 1.3vw);
 }
 
@@ -148,12 +154,14 @@ input::-webkit-input-placeholder {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #cd753f;
+  background-color: #000000;
+  color: #fff;
   border-radius: 10px;
+  margin-left: calc(2px + 0.5vw);
 }
 
 .dropdown-content a {
-  color: black;
+  color: #fff;
   padding: calc(1px + 0.5vw);
   text-decoration: none;
   display: block;
@@ -161,13 +169,13 @@ input::-webkit-input-placeholder {
 }
 
 .dropdown-content .t:hover {
-  background-color: #CD853F;
+  background-color: #2e70a9;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
 }
 
 .dropdown-content .b:hover {
-  background-color: #CD853F;
+  background-color: #2e70a9;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -175,7 +183,6 @@ input::-webkit-input-placeholder {
 .dropdown:hover .dropdown-content {
   display: block;
 }
-
 /* *END PROFILE MENU */
 
 .AboutTeam,
@@ -217,17 +224,14 @@ input::-webkit-input-placeholder {
   margin-right: auto;
 }
 
-/* ! FOOTER CSS */
-
 footer {
   display: flex;
-  flex: 0;
-  bottom: 0px;
   padding: calc(1px + 0.8vw);
   justify-content: space-evenly;
-  background-color: #B22222;
+  background-color: #000000;
+  color:#fff;
   position: relative;
-  margin-top: calc(1px + 6.2vw);
+  /* top: 470px; */
 }
 
 .about {
@@ -285,4 +289,4 @@ footer {
 .help ul li a{
   text-decoration: none;
   color: #FFF0F5;
-}
+ }
