--- a/Public/CSS/Categories.css
+++ b/Public/CSS/Categories.css
@@ -15,111 +15,117 @@ body{
 }
 
 /* ! HEADER CSS */
-header {
+header{
     display: flex;
     justify-content: space-between;
-    background-color: #CD853F;
-    /* min-height: ; */
-}
-
-/* * START LOGO */
-.logot {
+    /* background-color: #CD853F; */
+    background-color: #000000;
+    color:#fff;
+  }
+  
+  /* * START LOGO */
+  .logot{
     display: flex;
     align-items: center;
     cursor: pointer;
-}
-
-.logot img {
+  }
+  
+  .logot img{
     width: 50px;
     padding: 4%;
-}
-
-.logot h2 {
+  }
+  
+  .logot h2{
     padding-left: calc(1px + 0.6vw);
     padding-right: calc(1px + 0.6vw);
     font-size: calc(5px + 1.3vw);
     font-weight: 600;
-}
-
-/* *END LOGO */
-
-/* * START NAVIGATION BAR */
-.menuDiv {
-    background-color: #F4A460;
+  }
+  /* *END LOGO */
+  
+  /* * START NAVIGATION BAR */
+  .menuDiv {
+    /* margin-left: 70px; */
+    margin-left: calc(7px + 8vw);
+    background-color: #000000;
     color: #2e70a9;
     border-radius: 10px;
-}
-
-.menuDiv ul {
+  }
+  
+  .menuDiv ul {
     display: flex;
-}
-
-.menuDiv ul li {
+  }
+  .menuDiv ul li {
     list-style: none;
-}
-
-.menuDiv ul li a {
-    color: black;
+  }
+  
+  .menuDiv ul li a {
+    color: rgb(255, 255, 255) ;
     text-decoration: none;
     padding: calc(3px + 1.12vw);
-    display: flex;
+    display:  flex;
     align-content: center;
     font-size: calc(2px + 1.1vw);
     transition: ease-in-out all .3s;
     text-align: center;
-}
-
-.menuDiv ul li a:hover {
+  }
+  
+  .menuDiv ul li a:hover {
     color: #fff;
     font-size: calc(4px + 1vw);
     background: #2e70a9;
-}
-
-#topMenu .lt :hover {
+  }
+  
+  #topMenu .lt :hover {
     color: #fff;
     background: #2e70a9;
     border-bottom-left-radius: 7px;
     border-top-left-radius: 7px;
-}
-
-#topMenu .rt :hover {
+  }
+  
+  #topMenu .rt :hover {
     color: #fff;
     background: #2e70a9;
     border-top-right-radius: 7px;
     border-bottom-right-radius: 7px;
-}
-
-/* * END NAVIGATION BAR */
-
-/* * START PROFILE MENU */
-.profile {
-    /* background-color: chocolate; */
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.prof_photo {
-    width: calc(8px + 3vw);
-    padding-right: calc(0.5px + 1vw);
-    padding-left: calc(0.5px + 1vw);
-}
-
-.profile form input {
+  }
+  /* * END NAVIGATION BAR */
+  
+  /* * START PROFILE MENU */
+  .profile , .cart {
+      /* background-color: chocolate; */
+      display: flex;
+      align-items:center;
+      justify-content:flex-end;
+    }
+    
+    .prof_photo {
+      width: calc(8px + 3vw);
+      padding-right: calc(0.5px + 1vw);
+      padding-left: calc(0.5px + 1vw);
+    }
+    
+    .cart_photo{
+      width: calc(8px + 3vw);
+      padding-right: calc(1px + 1vw);
+      cursor:pointer;  
+    }
+  
+  .profile form input {
     width: calc(5px + 13vw);
     height: calc(10px + 1.5vw);
     border: 3px solid black;
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
-}
-
-input,
-input::-webkit-input-placeholder {
+  }
+  
+  input,
+  input::-webkit-input-placeholder {
     font-size: calc(5px + 1vw);
     line-height: 3;
-}
-
-.profile form button {
+  }
+  
+  .profile form button {
     background: #DC143C;
     color: white;
     border: 3px solid black;
@@ -128,47 +134,49 @@ input::-webkit-input-placeholder {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     width: calc(26px + 0.8vw);
-}
-
-.profile form button img {
+  }
+  
+  .profile form button img{
     width: calc(5px + 1.3vw);
-}
-
-.profile form {
+  }
+  
+  .profile form {
     display: flex;
     padding-left: calc(1px + 0.6vw);
-}
-
-.dropdown-content {
+  }
+  
+  .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #cd753f;
+    background-color: #000000;
+    color: #fff;
     border-radius: 10px;
-}
-
-.dropdown-content a {
-    color: black;
+    margin-left: calc(2px + 0.5vw);
+  }
+  
+  .dropdown-content a {
+    color: #fff;
     padding: calc(1px + 0.5vw);
     text-decoration: none;
     display: block;
     font-size: calc(4px + 0.8vw);
-}
-
-.dropdown-content .t:hover {
-    background-color: #CD853F;
+  }
+  
+  .dropdown-content .t:hover {
+    background-color: #2e70a9;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-}
-
-.dropdown-content .b:hover {
-    background-color: #CD853F;
+  }
+  
+  .dropdown-content .b:hover {
+    background-color: #2e70a9;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-}
-
-.dropdown:hover .dropdown-content {
+  }
+  
+  .dropdown:hover .dropdown-content {
     display: block;
-}
+  }
 /* *END PROFILE MENU */
 
 
@@ -197,12 +205,13 @@ input::-webkit-input-placeholder {
 }
 
 .cards .img{
-    width: calc(90px + 12vw);
-    aspect-ratio: 3/4;
-    border-radius: 4% 4% 0 0 ;
-    background-size: cover;
-    background-position: 5%;
+  width: calc(90px + 12vw);
+  aspect-ratio: 3/4;
+  border-radius: 4% 4% 0 0 ;
+  background-size: cover;
+  background-position: 5%;
 }
+
 
 .cards a{
     text-decoration: none;
@@ -223,69 +232,69 @@ input::-webkit-input-placeholder {
 
 }
 
-/* ! FOOTER CSS */
 footer {
-    display: flex;
-    padding: calc(1px + 0.8vw);
-    justify-content: space-evenly;
-    background-color: #B22222;
-    position: relative;
+  display: flex;
+  padding: calc(1px + 0.8vw);
+  justify-content: space-evenly;
+  background-color: #000000;
+  color:#fff;
+  position: relative;
+  /* top: 470px; */
 }
 
 .about {
-    width: 30%;
+  width: 30%;
 }
 
 .about h4 {
-    margin: 2%;
-    text-align: center;
-    font-size: calc(10px + 0.8vw);
-    color: #FFF0F5;
+  margin: 2%;
+  text-align: center;
+  font-size: calc(10px + 0.8vw);
+  color: #FFF0F5;
 }
 
 .about p {
-    padding-bottom: 5%;
-    text-align:justify;
-    color: #FFF0F5;
-    font-size: calc(5px + 0.6vw);
-    /* border: 2px solid black; */
+  padding-bottom: 5%;
+  text-align:justify;
+  color: #FFF0F5;
+  font-size: calc(5px + 0.6vw);
+  /* border: 2px solid black; */
 }
 
 .cont {
-    color: #FFF0F5;
-    font-size: calc(8px + 0.6vw);
+  color: #FFF0F5;
+  font-size: calc(8px + 0.6vw);
 }
 
 .book,
 .help{
-    display: flex;
-    flex-direction: column;
-    width: 30%;
+  display: flex;
+  flex-direction: column;
+  width: 30%;
 }
 
 .book h4,
 .help h4{
-    color: #FFF0F5;
-    margin: 2%;
-    font-size: calc(10px + 0.8vw);
-    text-align: center;
+  color: #FFF0F5;
+  margin: 2%;
+  font-size: calc(10px + 0.8vw);
+  text-align: center;
 }
 
 .book ul,
 .help ul{
-    align-self: center;
+  align-self: center;
 }
 
 .book ul li,
 .help ul li{
-    list-style: none;
-    font-size: calc(7px + 0.9vw);
-    margin: calc(2px + 0.5vw);
+  list-style: none;
+  font-size: calc(7px + 0.9vw);
+  margin: calc(2px + 0.5vw);
 }
 
 .book ul li a,
 .help ul li a{
-    text-decoration: none;
-    color: #FFF0F5;
-}
-
+  text-decoration: none;
+  color: #FFF0F5;
+ }
