--- a/Public/CSS/LoggedHP.css
+++ b/Public/CSS/LoggedHP.css
@@ -178,9 +178,10 @@ input::-webkit-input-placeholder {
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
 /* *END PROFILE MENU */
 
-                                /* ! MAIN CSS */
+                                          /* ! MAIN CSS */
 
 /* * START SLIDE SHOW */
 .slideshow-container {
@@ -188,7 +189,7 @@ input::-webkit-input-placeholder {
   position: relative;
   margin-left: 20%;
   margin-right: 20%;
-  margin-top: 2.5%;
+  margin-top: 1.5%;
   margin-bottom: 1.5%;
 }
 
@@ -201,8 +202,8 @@ input::-webkit-input-placeholder {
 }
 
 .mySlides img {
-  border-radius: 6px 6px 0 0;
-  width: 100%;
+  border-radius: 5px 5px 0 0;
+  width: calc(100% + 0.01vw);
   height: auto;
   aspect-ratio: 2.3/1.16;
 }
@@ -212,12 +213,12 @@ input::-webkit-input-placeholder {
   cursor: pointer;
   position: absolute;
   top: 40%;
-  padding: 2%;
+  padding: calc(5px + 1.2vw);
   color: white;
   font-weight: bold;
-  font-size: 300%;
+  font-size: calc(5px + 1.2vw);
   transition: 0.6s ease;
-  border-radius: 0 6px 6px 0;
+  border-radius: 0 3px 3px 0;
 }
 
 .next {
@@ -238,14 +239,13 @@ input::-webkit-input-placeholder {
 .text {
   background: linear-gradient(87.4deg, rgb(255, 241, 165) 1.9%, rgb(200, 125, 76) 49.7%, rgb(83, 54, 54) 100.5%);
   color: black;
-  font-size: calc(11px + 1.1vw);
+  font-size: calc(7px + 1.1vw);
   font-weight: 600;
   position: relative;
   bottom: 3px;
   text-align: center;
-  padding:4%;
-  border-radius: 0 0 6px 6px;
-  margin-bottom: 5%;
+  padding: calc(15px + 1.1vw);
+  border-radius: 0 0 5px 5px;
 }
 
 .fade {
@@ -272,7 +272,6 @@ input::-webkit-input-placeholder {
   font-size: calc(15px + 1vw);
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-weight: lighter;
-  color: #fff;
 }
 
 .Grid{
