--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -44,56 +44,32 @@
 </header>
 <main>
   <div class="view_wrap list-view" style="display: block;">
-    <div class="view_item">
-      <div class="vi_left" onclick="window.location.href = 'Product.html';">
-        <img src="/Images/ATTWN.jpg" alt="tomato">
-      </div>
-      <div class="vi_right">
-        <p class="title" onclick="window.location.href = 'Product.html';" >And Then There Were None</p>
-        <p class="author">-Agatha Christie</p>
-        <p class="content" >A definitive ensemble murder mystery, Clair's star-studded whodunit remains a masterfully-plotted game of suspense. On a remote and isolated island, ten people - seven invited guests, a newly hired personal secretary and two servants - find themselves facing their own deaths.</p>
-      </div>
-    </div>
-
-    <div class="view_item">
-      <div class="vi_left">
-        <img src="/Images/ATTWN.jpg" alt="tomato">
-      </div>
-      <div class="vi_right">
-        <p class="title">And Then There Were None</p>
-        <p class="author">-Agatha Christie</p>
-        <p class="content">A definitive ensemble murder mystery, Clair's star-studded whodunit remains a masterfully-plotted game of suspense. On a remote and isolated island, ten people - seven invited guests, a newly hired personal secretary and two servants - find themselves facing their own deaths.</p>
-      </div>
+    <%if (products.length < 20){ var x = products.length;} else{ var x = 20;} for(var i=0; i < x; i++){ %>
+      <div class="view_item">
+        <form action="/Product" method="post">
+        <div class="vi_left">
+          <input class="img" type="submit" style="background-image:url(<%=products[i].image%>);" value="" >
+        </div>
+        <input type="hidden" name="id" value=<%=products[i]._id%>>
+        </form>
+        <div class="vi_right">
+          <p class="title"><%=products[i].name%></p>
+          <p class="author">-<%=products[i].author%></p>
+          <form action="/cart" method='post' class="btns">
+            <input type="submit" class="btn1" value="Add To Cart">
+            <%= console.log(products[i]._id) %>
+            <%var PID =products[i]._id %>
+            <input type="hidden" name="id" value="<%= PID %>">
+            </form>
+            </div>
+          </div>
+      <%}%>
     </div>
 <div class="main">
      
   
   <section class="shopping-cart">
-    <ol class="ui-list shopping-cart--list" id="shopping-cart--list">
 
-      <script id="shopping-cart--list-item-template" type="text/template">
-        <li class="_grid shopping-cart--list-item">
-          <div class="_column product-image">
-            <img class="product-image--img" src="{{=img}}" alt="Item image" />
-          </div>
-          <div class="_column product-info">
-            <h4 class="product-name">{{=name}}</h4>
-            <p class="product-desc">{{=desc}}</p>
-            <div class="price product-single-price">${{=price}}</div>
-          </div>
-          <div class="_column product-modifiers" data-product-price="{{=price}}">
-            <div class="_grid">
-              <button class="_btn _column product-subtract">&minus;</button>
-              <div class="_column product-qty">0</div>
-              <button class="_btn _column product-plus">&plus;</button>
-            </div>
-            <button class="_btn entypo-trash product-remove">Remove</button>
-            <div class="price product-total-price">$0.00</div>
-          </div>
-        </li>
-      </script>
-
-    </ol>
   
       <div class="_grid cart-totals">
         <div class="_column subtotal" id="subtotalCtr">
@@ -108,23 +84,14 @@
           <div class="cart-totals-key">Total</div>
           <div class="cart-totals-value">0.00 $</div>
         </div>
-        
-       
-        <input type="checkbox" id="myCheck"  onclick="check()" >
-      <span id="special">  <label for="myCheck" class="terms">Accept Our Terms to start your Purchase </label> </span>
-        <button id ="checkt" class="_btn checkout-btn entypo-forward" onclick="checkout()">Checkout</button>
-
-        
-          
-
-
-        
     </div>
   
     </section>
   </div>
   
-  <div class="_column checkout" id ="text" style="display:none"><button id ="checkt" class="_btn checkout-btn entypo-forward" onclick="checkout()">Checkout</button></div>
+  <form class="_column checkout" id="text" action="/checkout" method="post">
+    <input type="submit" id="checkt" class="_btn checkout-btn entypo-forward" name="checkout" value="Check Out">
+  </form>
     
 <footer>
   <div class="about">
