--- a/views/List.ejs
+++ b/views/List.ejs
@@ -29,7 +29,7 @@
       <button class="simg" type="submit"><img src="/Images/search.png" alt=""></button>
     </form>
     <div class="dropdown">
-      <a href="/HTML/profile.html"><img class="prof_photo" src="/Images/profile.png" alt="profile"></a>
+      <a href="/profile"><img class="prof_photo" src="/Images/profile.png" alt="profile"></a>
       <div class="dropdown-content">
         <% if (userId) { %>
           <a class="t" href="SignIn.html">Profile</a>
