--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -30,10 +30,10 @@
       <button class="simg" type="submit"><img src="/Images/search.png" alt=""></button>
     </form>
         <div class="dropdown">
-        <a href="profile.html"><img class="prof_photo" src="/Images/profile.png" alt="profile"></a>
+        <a href="/profile"><img class="prof_photo" src="/Images/profile.png" alt="profile"></a>
         <div class="dropdown-content">
-          <a class="t" href="profile.html">Profile</a>
-          <a class="b" href="cart.html">Cart</a>
+          <a class="t" href="/profile">Profile</a>
+          <a class="b" href="/cart">Cart</a>
         </div>
       </div>
       <div class="cart">
