--- a/Public/CSS/Categories.css
+++ b/Public/CSS/Categories.css
@@ -182,7 +182,7 @@ header{
 
 /* !Main CSS */
 .title{
-    background-color: #B22222;
+    background-color: #c7c7c78f;
     text-align: center;
     padding: calc(8px + 1.4vw);
     font-size: calc(15px + 1vw);
