--- a/Public/CSS/ContactUs.css
+++ b/Public/CSS/ContactUs.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root{
-  --dark : #CD853F;
-  --light :#F4A460;
+  --dark : #ccccccc7;
+  --light :#faf6f381;
   --lbny :#2e70a9;
 }
 
@@ -208,7 +208,7 @@ input::-webkit-input-placeholder {
   align-items: center;
   flex-direction: column;
   border: 3px solid;
-  color: brown;
+  color: rgb(80, 80, 80);
   background-color: var(--dark);
   font-weight: bold;
   box-sizing: border-box;
