--- a/views/Categories.ejs
+++ b/views/Categories.ejs
@@ -10,7 +10,7 @@
 <body>
 
   <header>
-    <div class="logot" onclick="window.location.href = 'HomePage.html';">
+    <div class="logot" onclick="window.location.href = '/HomePage';">
       <img src="/Images/Book.png">
       <h2 class="brandn">BOOKWORM</h2>
     </div>
