--- a/views/HomePage.ejs
+++ b/views/HomePage.ejs
@@ -9,7 +9,7 @@
 <body>
 <script src="/JAVASCRIPT/HP.js"></script>
 <header>
-  <div class="logot" onclick="window.location.href = 'HomePage.html';">
+  <div class="logot" onclick="window.location.href = '/HomePage';">
     <img src="/Images/book.png" >
     <h2 class="brandn">BOOKWORM</h2>
   </div>
@@ -83,34 +83,34 @@
   <div class="Grid">
     <div class="img-wrapper">
       <img class="blur zoom" src="/Images/Horror.jpg">
-      <div class="content fade" onclick="window.location.href = 'HomePage.html';">IT</div>
+      <div class="content fade" onclick="window.location.href = '/HomePage';">IT</div>
     </div>
 
     <div class="img-wrapper">
       <img class="blur zoom" src="/Images/ATTWN.jpg">
-      <div class="content fade" onclick="window.location.href = 'HomePage.html';">And Then There <br> &nbsp;&nbsp;&nbsp; Were None</div>
+      <div class="content fade" onclick="window.location.href = '/HomePage';">And Then There <br> &nbsp;&nbsp;&nbsp; Were None</div>
     </div>
 
     <div class="img-wrapper">
       <img class="blur zoom" src="/Images/inj.jpg">
-      <div class="content fade" onclick="window.location.href = 'HomePage.html';">Injustice: Gods <br>&nbsp;&nbsp;&nbsp; Among Us</div>
+      <div class="content fade" onclick="window.location.href = '/HomePage';">Injustice: Gods <br>&nbsp;&nbsp;&nbsp; Among Us</div>
     </div>
   </div>
 
   <div class="Grid">
     <div class="img-wrapper">
       <img class="blur zoom" src="/Images/Manga.png">
-      <div class="content fade" onclick="window.location.href = 'HomePage.html';">Berserk</div>
+      <div class="content fade" onclick="window.location.href = '/HomePage';">Berserk</div>
     </div>
 
     <div class="img-wrapper">
       <img class="blur zoom" src="/Images/093.jpg">
-      <div class="content fade" onclick="window.location.href = 'HomePage.html';">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SCP-093: <br> Red Sea Object</div>
+      <div class="content fade" onclick="window.location.href = '/HomePage';">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SCP-093: <br> Red Sea Object</div>
     </div>
 
     <div class="img-wrapper">
       <img class="blur zoom" src="/Images/Dune.jpg">
-      <div class="content fade" onclick="window.location.href = 'HomePage.html';">Dune</div>
+      <div class="content fade" onclick="window.location.href = '/HomePage';">Dune</div>
     </div>
   </div>
 </main>
