--- a/Public/CSS/cart.css
+++ b/Public/CSS/cart.css
@@ -333,37 +333,6 @@ h1, .sub-heading {
 }
 
 /**
- * @section: product-image;
- * @extends: _column;
- */
-.product-image {
-  width: 16.663198%;
-  background: url("data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7") no-repeat center / cover transparent;
-}
-
-/**
- * @section: product-info;
- * @extends: _column;
- */
-.product-info {
-  width: 70.832119%;
-  padding: .5rem;
-}
-.product-name {
-  font: 300 2.4em/1 "Lato", sans-serif;
-  letter-spacing: -.025em;
-  margin: 0 0 .125em;
-}
-.price {
-  line-height: 1;
-  text-align: right;
-}
-.product-single-price {
-  margin-top: -1rem;
-  font-size: 2.4em;
-}
-
-/**
  * @section: product-modifiers;
  * @extends: _column;
  */
@@ -372,43 +341,19 @@ h1, .sub-heading {
   text-align: right;
   border-left: 1px solid #bdc3c7;
 }
-.product-subtract,
-.product-plus,
-.product-qty {
-  width: 33.330557%;
-  background-color: transparent;
-  color: #686868;
-  text-align: center;
-}
-.product-qty {
-  padding: .35em .75em;
-}
-.product-remove {
-  font-size: .875em;
-  margin-top: 3.35rem;
-  background-color: #e74c3c;
-  color: #ecf0f1;
-  width: 100%;
-  visibility: hidden;
-}
-.product-modifiers:hover .product-remove {
-  visibility: visible;
-}
-.product-remove:before {
-  margin-right: .5em;
-}
-.product-remove:hover {
-  background-color: #c0392b;
-}
-.product-total-price {
-  border-top: 1px solid #bdc3c7;
-  color: #95a5a6;
-  font-size: 1.25em;
-  padding: .5rem;
-}
 .shopping-cart--list-item:hover .product-total-price {
   background-color: #3498db;
   color: #ecf0f1;
+}
+.view_item .img{
+  width: calc(60px + 4.3vw);
+  height:100%;
+  border-radius: 5px;
+  cursor: pointer;
+  aspect-ratio: 3/4;
+  background-size: cover;
+  background-position: 5%;
+  margin-right: 25px;
 }
 
 /**
