--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,7 +9,7 @@
     <title>BOOKWORM</title>
 </head>
     <header>
-      <div class="logot" onclick="window.location.href = 'HomePage.html';">
+      <div class="logot" onclick="window.location.href = '/HomePage';">
         <img src="/Images/book.png" >
         <h2 class="brandn">BOOKWORM</h2>
       </div>
