--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -56,9 +56,10 @@
           <div class="vi_right">
             <p class="title"><%=products[i].name%></p>
             <p class="author">-<%=products[i].author%></p>
-            <form action="/cart" method='post' class="btns">
-              <input type="submit" class="btn1" value="Add To Cart">
+            <form action="/remove" method='post' class="btns">
+              <input type="submit" class="btn1" value="Remove">
               <%var PID =products[i]._id %> 
+              <p class="price"><%=products[i].price%>$</p>
               <input type="hidden" name="id" value="<%= PID %>">
               </form>
               </div>
