--- a/views/List.ejs
+++ b/views/List.ejs
@@ -80,12 +80,14 @@
             </p>
             <p class="author">-<%=products[i].author%>
             </p>
-            <form action="/cart" method='post' class="btns">
+            <form class="formo" action="/cart" method='post' class="btns">
               <input type="submit" class="btn1" value="Add To Cart">
-              <%= console.log(products[i]._id) %>
+                <%= console.log(products[i]._id) %>
                 <%var PID=products[i]._id %>
-                  <input type="hidden" name="id" value="<%= PID %>">
+                <%=products[i].price%>$
+              <input type="hidden" name="id" value="<%= PID %>">
             </form>
+            </p>
           </div>
         </div>
         <%}%>
