--- a/Public/CSS/List.css
+++ b/Public/CSS/List.css
@@ -242,6 +242,7 @@ input::-webkit-input-placeholder {
 .view_item .btns{
   display: flex;
   align-items: center;
+  flex-direction: column;
 }
 
 .view_item .btn1,.btn2 {
