--- a/Public/CSS/cart.css
+++ b/Public/CSS/cart.css
@@ -332,21 +332,10 @@ h1, .sub-heading {
 }
 
 .price{
-  text-indent: -60px;
+  margin-left: 2%;
   font-size: 3.6em;
 }
-.view_item .btn1,.btn2 {
-  font-size: calc(3px + 0.8vw);
-  width: calc(20px + 6.2vw);
-  background: rgba(0, 0, 0, 0.76);
-  padding: 0.6%;
-  border-radius: 5px;
-  color: #ffffff;
-  text-align: center;
-  font-weight: 250;
-  cursor: pointer;
-  margin-left: -3px;
-}
+
 /**
  * @section: product-modifiers;
  * @extends: _column;
@@ -370,11 +359,7 @@ h1, .sub-heading {
   background-position: 5%;
   margin-right: 25px;
 }
-.view_item .btns{
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
+
 /**
 
  * @section: cart-totals;
