--- a/views/Categories.ejs
+++ b/views/Categories.ejs
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Categories</title>
   <link href="/CSS/Categories.css" rel="stylesheet">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
