--- a/views/AboutUs.ejs
+++ b/views/AboutUs.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>About Us</title>
   <link href="/CSS/AboutUs.css" rel="stylesheet">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
