--- a/views/ContactUs.ejs
+++ b/views/ContactUs.ejs
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Contact Us</title>
   <link href="/CSS/ContactUs.css" rel="stylesheet">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
