--- a/views/HomePage.ejs
+++ b/views/HomePage.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>BOOKWORM</title>
   <link href="/CSS/Homepage.css" rel="stylesheet" >
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="Public/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
